// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox Rendering with custom templates 1`] = `
<div
  className="root"
>
  <form
    action=""
    className="form"
    noValidate={true}
    onReset={[Function]}
    onSubmit={[Function]}
    role="search"
  >
    <input
      aria-label="Search"
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      autoFocus={false}
      className="input"
      disabled={false}
      maxLength={512}
      onBlur={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      placeholder=""
      spellCheck="false"
      type="search"
      value=""
    />
    <button
      className="submit"
      dangerouslySetInnerHTML={
        {
          "__html": "submit template",
        }
      }
      hidden={false}
      title="Submit the search query."
      type="submit"
    />
    <button
      className="reset"
      dangerouslySetInnerHTML={
        {
          "__html": "reset template",
        }
      }
      hidden={true}
      title="Clear the search query."
      type="reset"
    />
    <span
      className="loadingIndicator"
      dangerouslySetInnerHTML={
        {
          "__html": "loadingIndicator template",
        }
      }
      hidden={true}
    />
  </form>
</div>
`;

exports[`SearchBox Rendering with default props 1`] = `
<div
  className="root"
>
  <form
    action=""
    className="form"
    noValidate={true}
    onReset={[Function]}
    onSubmit={[Function]}
    role="search"
  >
    <input
      aria-label="Search"
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      autoFocus={false}
      className="input"
      disabled={false}
      maxLength={512}
      onBlur={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      placeholder=""
      spellCheck="false"
      type="search"
      value=""
    />
    <button
      className="submit"
      dangerouslySetInnerHTML={
        {
          "__html": "submit",
        }
      }
      hidden={false}
      title="Submit the search query."
      type="submit"
    />
    <button
      className="reset"
      dangerouslySetInnerHTML={
        {
          "__html": "reset",
        }
      }
      hidden={true}
      title="Clear the search query."
      type="reset"
    />
    <span
      className="loadingIndicator"
      dangerouslySetInnerHTML={
        {
          "__html": "loadingIndicator",
        }
      }
      hidden={true}
    />
  </form>
</div>
`;
